--- a/client.html
+++ b/client.html
@@ -18,7 +18,7 @@
 
 
 	<div id="container">
-		<video autoplay="true"></video>
+		<video autoplay="true" id="videoElement"></video>
 	</div>
 	<script type="text/javascript">
 		var video=document.querySelector("#videoElement");
